Правки по 6 дз